--- a/nuget.config
+++ b/nuget.config
@@ -2,6 +2,7 @@
 
 <configuration>
     <packageSources>
+        <add key="Local" value="packages.local" />
         <add key="BepInEx" value="https://nuget.bepinex.dev/v3/index.json" />
         <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
         <add key="Reactor" value="https://nuget.reactor.gg/v3/index.json" />
