Add Cupid options and refactor event handling for round start and player death

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -40,4 +40,7 @@
     <PropertyGroup>
         <CodeAnalysisRuleSet>$(MSBuildThisFileDirectory)\stylecop.ruleset</CodeAnalysisRuleSet>
     </PropertyGroup>
+	<PropertyGroup>
+		<AmongUs>C:\Users\yanpl\Desktop\TOU Mira</AmongUs> <!-- change to your path -->
+	</PropertyGroup>
 </Project>
