--- a/AmongUs.props
+++ b/AmongUs.props
@@ -1,4 +1,7 @@
 <Project>
+	<PropertyGroup>
+		<AmongUsPlugins>$(AmongUs)/BepInEx/plugins</AmongUsPlugins>
+	</PropertyGroup>
     <ItemGroup>
         <PackageReference Include="AllOfUs.MiraAPI" Version="0.2.1-ci.648" />
         <PackageReference Include="Reactor" Version="2.3.1" />
@@ -8,8 +11,14 @@
         <PackageReference Include="BepInEx.AutoPlugin" Version="1.1.0" PrivateAssets="all" />
         <PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.1.0-rc.1" PrivateAssets="all" ExcludeAssets="runtime" />
     </ItemGroup>
+	<ItemGroup Condition="Exists('$(AmongUsPlugins)/TownOfUsMira.dll')">
+		<Reference Include="TownOfUsMira">
+			<HintPath>$(AmongUsPlugins)/TownOfUsMira.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+	</ItemGroup>
 
     <Target Name="Copy" AfterTargets="Build" Condition="'$(AmongUs)' != ''">
-        <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(AmongUs)/BepInEx/plugins/" UseSymboliclinksIfPossible="true" />
+        <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(AmongUsPlugins)/" UseSymboliclinksIfPossible="true" />
     </Target>
 </Project>
